--- a/views/about.pug
+++ b/views/about.pug
@@ -10,7 +10,7 @@ block content
 
                 .about__content
                     .about__content-button
-                        a(href="./how-to-join.html") how to join 
+                        a(href="./how-to-join") how to join 
                             i(class="fa-solid fa-arrow-up-right-from-square")
 
                 .about__stories
