--- a/views/how-to-join.pug
+++ b/views/how-to-join.pug
@@ -9,7 +9,7 @@ block content
                         .circle.hide.reveal-left
                         h2.hide-afterLeft join as a soldier
                         p.hide.reveal-left#noAction Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut iusto id fuga. Necessitatibus alias, hic quasi exercitationem nesciunt, officiis fuga facere magnam deleniti, quo enim dicta dolorum obcaecati a error.
-                        a.hide.reveal-left#noAction(href="./factions.html") SELECT A COUNTRY TO FIGHT FOR 
+                        a.hide.reveal-left#noAction(href="./factions") SELECT A COUNTRY TO FIGHT FOR 
                             i.fa-solid.fa-angles-right
                         img.reveal-afterLeft(src="./dist/img/zolnierz.png" alt="A leader")
 
