--- a/views/base.pug
+++ b/views/base.pug
@@ -1,9 +1,27 @@
 doctype html
-html
+html(lang="en")
     head
         block head
             meta(charset="UTF-8")
             meta(name="viewport", content="width=device-width, initial-scale=1.0")
+
+            meta(name="author", content="damian.duda2302@gmail.com")
+            meta(name="description", content="damian.duda2302@gmail.com")
+            meta(name="keywords", content="damian.duda2302@gmail.com")
+            link(rel="icon" href="../dist/img/logo.ico" type="image/x-icon" )
+
+            meta(property="og:title" content="Damian Duda - Portfolio")
+            meta(property="og:description" content="Damian Duda - Frontend Developer z pasją do tworzenia responsywnych i atrakcyjnych interfejsów webowych.")
+            meta(property="og:image" content="../dist/img/preview.png")
+            meta(property="og:image:width" content="1200")
+            meta(property="og:image:height" content="630")
+            meta(property="og:type" content="website")
+            meta(property="og:locale" content="en")
+
+            meta(name="twitter:title" content="Damian Duda - Portfolio")
+            meta(name="twitter:card" content="summary")
+            meta(name="twitter:creator" content="damian.duda2302@gmail.com")
+
             link(rel="preconnect", href="https://fonts.googleapis.com")
             link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
             link(href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400;600&display=swap", rel="stylesheet")
