--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -51,4 +51,4 @@ footer.footer
 
   .footer__author
     p Page made by: 
-      a(href="https://thadon1110.github.io/portfolio", target="_blank", rel="noopener noreferrer") Damian Duda
+      a(href="https://damianduda.dev/", target="_blank", rel="noopener noreferrer") Damian Duda
